add comment by copilot

--- a/.github/workflows/kb-alpha-update.yml
+++ b/.github/workflows/kb-alpha-update.yml
@@ -58,3 +58,23 @@ jobs:
             --body "Automated update of Kubebuilder project scaffolding to latest version." \
             --base main \
             --head "$PR_BRANCH"
+
+      - name: Grab PR number for this branch
+        id: find_pr
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          pr_number=$(gh pr list \
+            --state open \
+            --head "$PR_BRANCH" \
+            --json number \
+            --jq '.[0].number')   # pick the first (and only) match
+            echo "pr_number=$pr_number" >> "$GITHUB_OUTPUT"
+
+      - name: Leave a comment in the PR
+        if: steps.find_pr.outputs.pr_number != ''
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr comment "${{ steps.find_pr.outputs.pr_number }}" \
+          -b "Hi @copilot can you review the conflict markers/chunks in this PR and suggest changes?"
