--- a/.github/workflows/kb-alpha-update.yml
+++ b/.github/workflows/kb-alpha-update.yml
@@ -42,4 +42,5 @@ jobs:
         kubebuilder alpha update \
           --force \
           --squash \
+          --preserve-path .github/workflows \
           --open-issue
