--- a/.github/workflows/kb-alpha-update.yml
+++ b/.github/workflows/kb-alpha-update.yml
@@ -41,4 +41,5 @@ jobs:
       run: |
         kubebuilder alpha update \
           --force \
+          --preserve-path .github/workflows \
           --open-issue
