force preserve open issue

--- a/.github/workflows/kb-alpha-update.yml
+++ b/.github/workflows/kb-alpha-update.yml
@@ -41,5 +41,6 @@ jobs:
       run: |
         kubebuilder alpha update \
           --force \
+          --preserve-path .github/workflows \
           --open-issue
 
