--- a/.github/workflows/kb-alpha-update.yml
+++ b/.github/workflows/kb-alpha-update.yml
@@ -43,5 +43,5 @@ jobs:
           --force \
           --squash \
           --preserve-path .github/workflows \
-          --open-issue
+          --open-pr
 
