--- a/.github/workflows/kb-alpha-update.yml
+++ b/.github/workflows/kb-alpha-update.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         kubebuilder alpha update \
           --force \
+          --squash \
           --preserve-path .github/workflows \
           --open-pr
 
