add preserve path

--- a/.github/workflows/kb-alpha-update.yml
+++ b/.github/workflows/kb-alpha-update.yml
@@ -47,5 +47,6 @@ jobs:
         kubebuilder alpha update \
           --force \
           --squash \
+          --preserve-path .github/workflows
           --open-gh-issue
 
