--- a/.github/workflows/kb-alpha-update.yml
+++ b/.github/workflows/kb-alpha-update.yml
@@ -47,6 +47,6 @@ jobs:
         kubebuilder alpha update \
           --force \
           --squash \
-          --preserve-path .github/workflows
+          --preserve-path .github/workflows \
           --open-gh-issue
 
