--- a/.github/workflows/kb-alpha-update.yml
+++ b/.github/workflows/kb-alpha-update.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         kubebuilder alpha update \
           --force \
-          --preserve-path .github/workflows 
+          --preserve-path .github/workflows \
           --no-squash
 
     - name: Push updated branch
