(chore) original code from main to keep changes

--- a/config/samples/example.com_v1_wordpress.yaml
+++ b/config/samples/example.com_v1_wordpress.yaml
@@ -2,7 +2,7 @@ apiVersion: example.com.my.domain/v1
 kind: Wordpress
 metadata:
   labels:
-    app.kubernetes.io/name: test-operator-b
+    app.kubernetes.io/name: test-operator
     app.kubernetes.io/managed-by: kustomize
   name: wordpress-sample
 spec:
