--- a/config/certmanager/issuer.yaml
+++ b/config/certmanager/issuer.yaml
@@ -5,7 +5,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   labels:
-    app.kubernetes.io/name: test-operator-b
+    app.kubernetes.io/name: test-operator
     app.kubernetes.io/managed-by: kustomize
   name: selfsigned-issuer
   namespace: system
