--- a/config/rbac/wordpress_admin_role.yaml
+++ b/config/rbac/wordpress_admin_role.yaml
@@ -1,4 +1,4 @@
-# This rule is not used by the project test-operator-b itself.
+# This rule is not used by the project test-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
 # Grants full permissions ('*') over example.com.my.domain.
@@ -9,7 +9,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: test-operator-b
+    app.kubernetes.io/name: test-operator
     app.kubernetes.io/managed-by: kustomize
   name: wordpress-admin-role
 rules:
